# mistmcp

./: .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  EVALUATION.md  FASTMCP_TOOL_METHOD_INVESTIGATION.md  LICENSE  Makefile  README.md  build_standalone.py  doc.json.json  generate_from_openapi.py  generate_mcp_tools.py  mcp_config.json  mist.openapi.yaml  pyproject.toml  requirements-dev.txt  setup.cfg  test_tools.py  update_readme.py
.github/workflows/: build-standalone.yml  test.yml
landing-page/: highlight.min.js  index.html  script.js  styles.css
mcp_generator/: custom_tags.yaml  custom_tags_def.yaml  excluded_operation_ids.yaml  excluded_tags.yaml  generate_from_openapi.py  python_tmpl.py  schemas_config.yaml  tools_optimization.yaml
mcp_generator/templates/: tmpl_device_configuration.py  tmpl_get_configuration_object_schema.py  tmpl_get_configuration_objets.py  tmpl_get_object_schema.py  tmpl_getnextpage.py  tmpl_helper.py  tmpl_init.py  tmpl_req.py  tmpl_site_configuration.py  tmpl_tool.py  tmpl_tool_change_configuration_objects.py  tmpl_tool_read.py  tmpl_tool_search_device.py  tmpl_tool_update_configuration_objects.py  tmpl_tool_utilities.py  tmpl_tool_write.py  tmpl_tool_write_delete.py
proxy/: main.py
src/mistmcp/: __ctools.py  __init__.py  __logger.py  __main__.py  __mistapi.py  __server.py  __version.py  config.py  elicitation_middleware.py  elicitation_processor.py  logger.py  null_strip_middleware.py  request_processor.py  response_formatter.py  response_processor.py  server.py  server_factory.py  session_aware_server.py  session_manager.py  session_middleware.py  session_tools.py  simple_server.py  tool_helper.py  tool_loader.py  tool_manager.py  tools.json  tools_helper.py
src/mistmcp/elicitation/: elicitation_handler.py
src/mistmcp/tools/: __init__.py  change_configuration_objects.py  change_org_configuration_objects.py  change_site_configuration_objects.py  get_configuration_object_schema.py  get_configuration_objects.py  get_constants.py  get_device_configuration.py  get_info.py  get_insight_metrics.py  get_next_page.py  get_object_schema.py  get_org_configuration_objects.py  get_org_inventory.py  get_org_licenses.py  get_org_or_site_info.py  get_org_sites_sle.py  get_org_sle.py  get_self.py  get_site_configuration_objects.py  get_site_derived_configuration.py  get_site_device_synthetic_test.py  get_site_rrm_info.py  get_site_sle.py  get_stats.py  list_audit_logs.py  list_org_suppressed_alarms.py  list_rogue_devices.py  list_site_sle_info.py  list_upgrades.py  schemas_data.py  search_alarms.py  search_audit_logs.py  search_client.py  search_device.py  search_device_config_history.py  search_devices.py  search_events.py  search_guest_authorization.py  search_nac_user_macs.py  (+18 more)
src/mistmcp/tools/admins/: getadminregistrationinfo.py
src/mistmcp/tools/clients/: countorgguestauthorizations.py  countorgnacclientevents.py  countorgnacclients.py  countorgwanclientevents.py  countorgwanclients.py  countorgwiredclients.py  countorgwirelessclientevents.py  countorgwirelessclients.py  countorgwirelessclientssessions.py  countsiteguestauthorizations.py  getorgguestauthorization.py  getsiteguestauthorization.py  listorgguestauthorizations.py  (+15 more)
test/: enable_tools.py  login.py  setup_mist.py
tests/: conftest.py  test_config.py  test_elicitation_middleware.py  test_env_loading.py  test_generator_configuration_tool_sync.py  test_imports_simple.py  test_main.py  test_main_simple.py  test_server.py  test_server_factory.py  test_server_instruction_sync.py  test_session_aware_server.py  test_session_manager.py  test_session_middleware.py  test_session_tools.py  test_tool_loader.py  test_tool_loader_simple.py  test_tool_manager.py  test_tools_helper.py  test_utilities.py  test_version.py
(+621 files in other folders)
